--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,12 +105,14 @@
     <!-- Here, we customize the blurring view with values different from the defaults. -->
     <com.fivehundredpx.android.blur.BlurringView
         android:id="@+id/blurring_view"
+        android:background="@android:color/transparent"
         android:layout_width="360dp"
         android:layout_height="360dp"
         android:layout_gravity="center"
+        app:cornerRadius="16"
         app:blurRadius="11"
         app:downsampleFactor="6"
-        app:overlayColor="#99FFFFFF"/>
+        app:overlayColor="#66FF00FF"/>
 
     <Button
         android:id="@+id/shuffle_button"
