--- a/blurringview/src/main/res/values/attrs.xml
+++ b/blurringview/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="PxBlurringView">
+        <attr name="cornerRadius" format="integer" />
         <attr name="blurRadius" format="integer" />
         <attr name="downsampleFactor" format="integer" />
         <attr name="overlayColor" format="color" />
